 ! remove undocumented BeamLaser range modifier (provided 30% extra when fired by mobile units)
 ! remove legacy (COB, though also affecting Lua) hack allowing units with onlyForward weapons to fire regardless of AimWeapon status
 - allow CEG trails for crashing aircraft (engine will randomly select from any generators listed in sfxTypes.crashExplosionGenerators)

Lua:
 - let Spring.SelectUnitArray select enemy units with godmode enabled
 - let Unit*Collision callins skip engine collision handling if true is returned (from any synced gadget)
 - call gadgetHandler:Explosion for unsynced gadgets (but discard the return value)
 - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire
 - allow setting terrain-type hardness and name via Spring.SetTerrainTypeData
 ! add extra boolean return-value to Spring.GetPlayerInfo between 'rank' (#9) and 'customPlayerKeys' (#11)
   select(10, Spring.GetPlayerInfo(player)) is now equal to select(4, Spring.GetTeamInfo(player.team))
 ! return the terrain-type index from Spring.GetGroundInfo and Spring.GetTerrainTypeData
   these functions now push [number index, string name, ...] rather than [string name, ...]
   onto the stack
 ! change DefaultCommand call order
    previously widgets were called first, and if they returned anything, gadgets weren't called at all
    now gadgets are called first, then widgets are always called and can override
 - add a 3rd param to DefaultCommand callin: the current default command
    works with the above: gadgets receive the default engine cmd,
    widgets then receive what gadgets returned (possibly engine default)
 - add  Spring.GetGlobalLos(allyTeamID) -> bool  to LuaSyncedRead
 - add  Spring.IsNoCostEnabled() -> bool  to LuaSyncedRead
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally